--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,6 @@ commands:
    perktransfer:
       description: Transfer perks between players.
       usage: /perktransfer [perk] [player]
-      permission: perk.transfer
-      permission-message: You do not have permission for this command.
+      permission: perktransfer.use
+      permission-message: §cYou do not have permission for this command.
       aliases: [ptransfer, ptrade]
